# biotech-news-sentiment

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: finetuning-3label-topic-pruned.csv  finetuning-3label.csv  finetuning-binary-label.csv  finetuning_3_labels_topic_pruned.csv  finetuning_5_labels_topic_pruned.csv  news+prices-appended.csv  news+prices-new-2.csv  news+prices.csv
data/raw/: news_validated-new.csv
lora_adapter/: README.md  adapter_config.json  adapter_model.safetensors
notebooks/: OLD-3-LABELS.ipynb  TOREMOVE.ipynb  feature_extraction_3_labels.ipynb  fine_tuning.ipynb  fine_tuning_3_labels.ipynb  fine_tuning_3labels.py  fine_tuning_5_labels.ipynb  lora_tuning.ipynb  nv_embed_lora.ipynb
scripts/: stella-1.5B.sh
src/data_pipeline/: biotech.yaml  biotech_validated.yaml  ib_import_price.ipynb  import_news.ipynb  profit_metric.py  reformat_fine_tune.ipynb
