[project]
name = "biotech-news-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.26.0",
    "bs4>=0.0.2",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "feedparser>=6.0.11",
    "huggingface-hub>=0.32.4",
    "ib-async>=1.0.3",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.52.4",
    "xformers>=0.0.29.post3",
    "yfinance>=0.2.61",
]
